fix: update background color of contact form for improved visibility

--- a/src/styles/pages/contacto.less
+++ b/src/styles/pages/contacto.less
@@ -319,6 +319,8 @@
       }
 
       #cs-form {
+        background-color: var(--background-sections);
+
         label,
         input,
         textarea {
